--- a/index.html
+++ b/index.html
@@ -515,11 +515,11 @@
     <!-- 导航栏 -->
     <nav id="navbar">
         <div class="container">
-            <a href="#" class="logo">张三</a>
+            <a href="#" class="logo">刘业深</a>
             <ul class="nav-links">
                 <li><a href="#home">首页</a></li>
                 <li><a href="#about">关于</a></li>
-                <li><a href="#skills">技能</a></li>
+                <li><a href="#skills">成功</a></li>
                 <li><a href="#projects">项目</a></li>
                 <li><a href="#contact">联系</a></li>
             </ul>
@@ -535,8 +535,8 @@
         <!-- 英雄区域 -->
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>你好，我是张三</h1>
-                <p>全栈开发工程师 | 创意设计师 | 技术爱好者</p>
+                <h1>你好，我是刘业深</h1>
+                <p>学术工作者 | 在读博士生 </p>
                 <a href="#about" class="cta-button">了解更多</a>
             </div>
         </section>
@@ -550,10 +550,9 @@
                         <div class="avatar">👨‍💻</div>
                     </div>
                     <div class="about-text">
-                        <h3>热爱技术的创新者</h3>
-                        <p>我是一名充满激情的全栈开发工程师，拥有5年的软件开发经验。专注于创建优雅、高效的解决方案，将复杂的想法转化为简洁的代码。</p>
-                        <p>我相信技术应该为人服务，致力于开发用户友好、性能优越的应用程序。无论是前端界面还是后端架构，我都追求完美的用户体验和可维护的代码质量。</p>
-                        <p>除了编程，我还热爱设计、摄影和音乐，这些爱好让我在技术工作中保持创意和灵感。</p>
+                        <h3>学术研究者</h3> 
+                        <p>我是一名高校工商管理专业在读博士生，研究方向聚焦于制度压力、高管特征与企业可持续发展。</p>
+                        <p>擅长自然语言处理技术，例如利用大语言模型提取指标应用于实证分析。</p>
                     </div>
                 </div>
             </div>
@@ -562,60 +561,48 @@
         <!-- 技能 -->
         <section id="skills" class="section">
             <div class="container">
-                <h2 class="fade-in-up">专业技能</h2>
+                <h2 class="fade-in-up">学术成果</h2>
                 <div class="skills-grid fade-in-up">
-                    <div class="skill-card">
-                        <div class="skill-icon">🌐</div>
-                        <h3>前端开发</h3>
-                        <p>React, Vue, JavaScript, TypeScript, HTML5, CSS3</p>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">⚙️</div>
-                        <h3>后端开发</h3>
-                        <p>Node.js, Python, Java, Express, Django, Spring Boot</p>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">🗄️</div>
-                        <h3>数据库</h3>
-                        <p>MySQL, PostgreSQL, MongoDB, Redis</p>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">☁️</div>
-                        <h3>云服务</h3>
-                        <p>AWS, Docker, Kubernetes, CI/CD</p>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">🎨</div>
-                        <h3>UI/UX设计</h3>
-                        <p>Figma, Adobe XD, Photoshop, 用户体验设计</p>
-                    </div>
-                    <div class="skill-card">
-                        <div class="skill-icon">📱</div>
-                        <h3>移动开发</h3>
-                        <p>React Native, Flutter, 微信小程序</p>
-                    </div>
+                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S1057521924008044" target="_blank" style="text-decoration: none; color: inherit;">
+                        <div class="skill-card">
+                            <div class="skill-icon">🤖</div>
+                            <h3>AI and Environmental Performance</h3>                       
+                            <p>KeyWords: artificial intelligence application, environmental performance, operating costs, operational efficiency, employee productivity</p>
+                        </div>
+                    </a>
+                    <a href="https://doi.org/10.1080/1540496X.2024.2324190" target="_blank" style="text-decoration: none; color: inherit;">
+                        <div class="skill-card">
+                            <div class="skill-icon">💰</div>
+                            <h3>Compensation Stickiness and Environmental Investment</h3>                          
+                            <p>KeyWords: executives' compensation stickiness, accounting information quality, environmental investments, heavy pollutingenterprises, executives' environmental attention</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
-
+       
         <!-- 项目展示 -->
         <section id="projects" class="section">
             <div class="container">
-                <h2 class="fade-in-up">精选项目</h2>
+                <h2 class="fade-in-up">大语言模型相关项目</h2>
                 <div class="projects-grid fade-in-up">
                     <div class="project-card">
                         <div class="project-image">🛒</div>
                         <div class="project-content">
-                            <h3>电商平台</h3>
-                            <p>基于React和Node.js开发的全栈电商解决方案，支持商品管理、订单处理、支付集成等完整功能。</p>
+                            <h3>AI专利识别</h3>
+                            <p>基于人工标注AI专利数据对比了传统机器学习算法与LLMs(例如，BERT,ChatGPT)在AI专利识别中的性能，选择最优模型识别上市公司AI专利。</p>
                             <div class="project-tags">
-                                <span class="tag">React</span>
-                                <span class="tag">Node.js</span>
-                                <span class="tag">MongoDB</span>
-                                <span class="tag">Express</span>
+                                <span class="tag">Large Language Models</span>
+                                <span class="tag">BERT</span>
+                                <span class="tag">ChatGPT</span>
+                                <span class="tag">Machine Learning</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="project-link">查看演示</a>
+                                <a href="https://www-sciencedirect-com.libproxy.smu.edu.sg/science/article/pii/S1057521924008044"
+                                    target="_blank"
+                                    class="project-link">
+                                    相关论文
+                                </a>
                                 <a href="#" class="project-link">源代码</a>
                             </div>
                         </div>
@@ -623,8 +610,8 @@
                     <div class="project-card">
                         <div class="project-image">📱</div>
                         <div class="project-content">
-                            <h3>任务管理应用</h3>
-                            <p>跨平台移动应用，帮助用户高效管理日常任务和项目进度，支持团队协作和实时同步。</p>
+                            <h3>绿色注意力</h3>
+                            <p>基于词典法测量管理者绿色注意力</p>
                             <div class="project-tags">
                                 <span class="tag">React Native</span>
                                 <span class="tag">Firebase</span>
@@ -632,24 +619,11 @@
                                 <span class="tag">TypeScript</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="project-link">查看演示</a>
-                                <a href="#" class="project-link">源代码</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">📊</div>
-                        <div class="project-content">
-                            <h3>数据可视化平台</h3>
-                            <p>企业级数据分析和可视化平台，提供丰富的图表组件和交互式仪表板定制功能。</p>
-                            <div class="project-tags">
-                                <span class="tag">Vue.js</span>
-                                <span class="tag">D3.js</span>
-                                <span class="tag">Python</span>
-                                <span class="tag">Flask</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" class="project-link">查看演示</a>
+                                <a href="https://www.tandfonline.com/doi/abs/10.1080/1540496X.2024.2324190"
+                                    target="_blank"
+                                    class="project-link">
+                                    相关论文
+                                </a>
                                 <a href="#" class="project-link">源代码</a>
                             </div>
                         </div>
@@ -663,11 +637,11 @@
             <div class="container">
                 <h2 class="fade-in-up">联系我</h2>
                 <div class="contact-content fade-in-up">
-                    <p style="font-size: 1.2rem; margin-bottom: 2rem;">有项目想要合作？让我们一起创造些什么吧！</p>
+                    <p style="font-size: 1.2rem; margin-bottom: 2rem;">有论文想要合作？让我们一起创造些什么吧！</p>
                     <div class="contact-info">
                         <div class="contact-item">
                             <span>📧</span>
-                            <span>zhang.san@email.com</span>
+                            <span>1287508749@qq.com</span>
                         </div>
                         <div class="contact-item">
                             <span>📱</span>
@@ -675,7 +649,7 @@
                         </div>
                         <div class="contact-item">
                             <span>📍</span>
-                            <span>中国·上海</span>
+                            <span>中国·南京</span>
                         </div>
                     </div>
                     <div class="social-links">
@@ -692,7 +666,7 @@
     <!-- 页脚 -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 张三. 保留所有权利.</p>
+            <p>&copy; 2025 刘业深. 保留所有权利.</p>
         </div>
     </footer>
 
