--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 <h2 class="fade-in-up">大语言模型相关项目</h2>
                 <div class="projects-grid fade-in-up">
                     <div class="project-card">
-                        <div class="project-image">🛒</div>
+                        <div class="project-image">🧠</div>
                         <div class="project-content">
                             <h3>AI专利识别</h3>
                             <p>基于人工标注AI专利数据对比了传统机器学习算法与LLMs(例如，BERT,ChatGPT)在AI专利识别中的性能，选择最优模型识别上市公司AI专利。</p>
@@ -608,7 +608,7 @@
                         </div>
                     </div>
                     <div class="project-card">
-                        <div class="project-image">📱</div>
+                        <div class="project-image">🌱</div>
                         <div class="project-content">
                             <h3>绿色注意力</h3>
                             <p>基于词典法测量管理者绿色注意力</p>
