--- a/index.html
+++ b/index.html
@@ -613,10 +613,9 @@
                             <h3>绿色注意力</h3>
                             <p>基于词典法测量管理者绿色注意力</p>
                             <div class="project-tags">
-                                <span class="tag">React Native</span>
-                                <span class="tag">Firebase</span>
-                                <span class="tag">Redux</span>
-                                <span class="tag">TypeScript</span>
+                                <span class="tag">词典法</span>
+                                <span class="tag">Word2Vec</span>
+                                <span class="tag">MD&A</span>
                             </div>
                             <div class="project-links">
                                 <a href="https://www.tandfonline.com/doi/abs/10.1080/1540496X.2024.2324190"
