--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <ul class="nav-links">
                 <li><a href="#home">首页</a></li>
                 <li><a href="#about">关于</a></li>
-                <li><a href="#skills">成功</a></li>
+                <li><a href="#skills">成果</a></li>
                 <li><a href="#projects">项目</a></li>
                 <li><a href="#contact">联系</a></li>
             </ul>
@@ -567,14 +567,25 @@
                         <div class="skill-card">
                             <div class="skill-icon">🤖</div>
                             <h3>AI and Environmental Performance</h3>                       
-                            <p>KeyWords: artificial intelligence application, environmental performance, operating costs, operational efficiency, employee productivity</p>
+                            <div class="project-tags">
+                                <span class="tag">artificial intelligence application</span>
+                                <span class="tag">environmental performance</span>
+                                <span class="tag">operating costs</span>
+                                <span class="tag">operational efficiency</span>
+                                <span class="tag">employee productivity</span>
+                            </div>
                         </div>
                     </a>
                     <a href="https://doi.org/10.1080/1540496X.2024.2324190" target="_blank" style="text-decoration: none; color: inherit;">
                         <div class="skill-card">
                             <div class="skill-icon">💰</div>
                             <h3>Compensation Stickiness and Environmental Investment</h3>                          
-                            <p>KeyWords: executives' compensation stickiness, accounting information quality, environmental investments, heavy pollutingenterprises, executives' environmental attention</p>
+                            <div class="project-tags">
+                                <span class="tag">executives' compensation stickiness</span>
+                                <span class="tag">environmental investments</span>
+                                <span class="tag">accounting information quality</span>
+                                <span class="tag">executives' environmental attention</span>
+                            </div>                            
                         </div>
                     </a>
                 </div>
